--- a/app/src/main/res/layout/base_toolbar.xml
+++ b/app/src/main/res/layout/base_toolbar.xml
@@ -13,6 +13,8 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:gravity="center"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
