--- a/app/src/main/res/layout/item_matter.xml
+++ b/app/src/main/res/layout/item_matter.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="5dp"
     android:background="@color/white"
     android:paddingBottom="@dimen/small_padding"
@@ -15,7 +16,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/matter_img" />
+        tools:src="@mipmap/matter_img" />
 
     <TextView
         android:id="@+id/tv_title"
