--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -43,11 +44,12 @@
 
 
             <com.ipd.jumpbox.jumpboxlibrary.widget.CircleImageView
+                android:id="@+id/civ_avatar"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="-30dp"
-                android:src="@mipmap/avatar_default"
+                tools:src="@mipmap/avatar_default"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
@@ -60,14 +62,16 @@
 
 
                 <TextView
+                    android:id="@+id/tv_username"
                     style="@style/BaseTextStyle"
                     android:layout_marginTop="@dimen/small_padding"
-                    android:text="张景亮" />
+                    tools:text="张景亮" />
 
                 <TextView
+                    android:id="@+id/tv_proxy"
                     style="@style/BaseTextStyle"
                     android:layout_marginTop="4dp"
-                    android:text="(代理MYN950)"
+                    tools:text="(代理MYN950)"
                     android:textColor="@color/LightGrey" />
 
                 <TextView
