--- a/app/src/main/res/layout/item_matter.xml
+++ b/app/src/main/res/layout/item_matter.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/small_padding">
 
     <ImageView
-        android:id="@+id/iv_icon"
+        android:id="@+id/iv_customer_avatar"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
@@ -27,7 +27,7 @@
         android:maxLines="1"
         android:text="『查询』青汁怎样查真伪？"
         app:layout_constraintBottom_toTopOf="@id/tv_desc"
-        app:layout_constraintLeft_toRightOf="@id/iv_icon"
+        app:layout_constraintLeft_toRightOf="@id/iv_customer_avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
@@ -53,7 +53,7 @@
         android:layout_marginTop="@dimen/small_padding"
         android:text="2018-08-08"
         android:textColor="@color/LightGrey"
-        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
+        app:layout_constraintBottom_toBottomOf="@id/iv_customer_avatar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_desc" />
 
