--- a/app/src/main/res/layout/item_home_action.xml
+++ b/app/src/main/res/layout/item_home_action.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/small_padding">
 
     <ImageView
-        android:id="@+id/iv_customer_avatar"
+        android:id="@+id/iv_product"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:src="@mipmap/icon_system_msg" />
@@ -20,7 +20,7 @@
         android:layout_marginLeft="@dimen/base_padding"
         android:text="系统消息"
         app:layout_constraintBottom_toTopOf="@id/tv_msg"
-        app:layout_constraintLeft_toRightOf="@id/iv_customer_avatar"
+        app:layout_constraintLeft_toRightOf="@id/iv_product"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -44,7 +44,7 @@
         android:maxLines="1"
         android:text="恭喜您注册成为泰溪科技app的用户"
         android:textColor="@color/LightGrey"
-        app:layout_constraintBottom_toBottomOf="@id/iv_customer_avatar"
+        app:layout_constraintBottom_toBottomOf="@id/iv_product"
         app:layout_constraintLeft_toLeftOf="@id/tv_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -53,6 +53,6 @@
         style="@style/ViewLine"
         android:layout_marginTop="@dimen/small_padding"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_customer_avatar" />
+        app:layout_constraintTop_toBottomOf="@id/iv_product" />
 
 </android.support.constraint.ConstraintLayout>
