--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipChildren="false"
         android:orientation="vertical"
         android:paddingBottom="20dp">
@@ -37,7 +37,6 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="100dp"
             android:clipChildren="false"
-            android:clipToPadding="false"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
             app:layout_constraintTop_toTopOf="parent">
@@ -49,8 +48,8 @@
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="-30dp"
-                tools:src="@mipmap/avatar_default"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@mipmap/avatar_default" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,8 +70,8 @@
                     android:id="@+id/tv_proxy"
                     style="@style/BaseTextStyle"
                     android:layout_marginTop="4dp"
-                    tools:text="(代理MYN950)"
-                    android:textColor="@color/LightGrey" />
+                    android:textColor="@color/LightGrey"
+                    tools:text="(代理MYN950)" />
 
                 <TextView
                     style="@style/BaseTextStyle"
