--- a/app/src/main/res/layout/item_store_product.xml
+++ b/app/src/main/res/layout/item_store_product.xml
@@ -22,7 +22,6 @@
         style="@style/BaseTextStyle"
         android:layout_width="0dp"
         android:layout_marginLeft="@dimen/base_padding"
-        android:layout_marginTop="@dimen/small_padding"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="酵素青汁"
@@ -33,22 +32,34 @@
 
     <TextView
         android:id="@+id/tv_product_desc"
-        style="@style/BaseTextStyle"
-        android:text="3箱"
+        style="@style/SmallTextStyle"
+        android:layout_width="0dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="大麦若叶青汁粉"
         android:textColor="@color/LightGrey"
-        app:layout_constraintBottom_toBottomOf="@id/iv_product"
+        app:layout_constraintBottom_toTopOf="@id/tv_product_spec"
         app:layout_constraintLeft_toLeftOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    <TextView
+        android:id="@+id/tv_product_spec"
+        style="@style/SmallTextStyle"
+        android:text="200盒"
+        android:textColor="@color/LightGrey"
+        app:layout_constraintBottom_toTopOf="@id/tv_product_price"
+        app:layout_constraintLeft_toLeftOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_desc" />
 
 
     <TextView
         android:id="@+id/tv_product_price"
         style="@style/BaseTextStyle"
-        android:text="￥ 168.00"
+        android:text="￥ 1680.00"
         android:textColor="@color/red"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintLeft_toLeftOf="@id/tv_title" />
 
 
 </android.support.constraint.ConstraintLayout>
