--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -103,6 +103,18 @@
         <item name="android:textSize">@dimen/title_text_size</item>
     </style>
 
+    <style name="PromoteLableStyle" parent="TitleTextStyle">
+        <item name="android:layout_width">120dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/shape_promote_light</item>
+        <item name="android:paddingBottom">@dimen/small_padding</item>
+        <item name="android:paddingTop">@dimen/small_padding</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+    <style name="PromoteLableMarginStyle">
+        <item name="android:layout_marginTop">25dp</item>
+    </style>
+
     <style name="ScreenViewStyle">
         <item name="android:paddingTop">@dimen/base_padding</item>
         <item name="android:paddingBottom">@dimen/base_padding</item>
