--- a/app/src/main/res/layout/activity_apply_withdraw.xml
+++ b/app/src/main/res/layout/activity_apply_withdraw.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
@@ -31,7 +32,7 @@
                 android:id="@+id/tv_bank_name"
                 style="@style/BaseTextStyle"
                 android:layout_marginLeft="@dimen/base_padding"
-                android:text="中国建设银行"
+                tools:text="中国建设银行"
                 app:layout_constraintBottom_toTopOf="@id/tv_bank_no"
                 app:layout_constraintLeft_toRightOf="@id/iv_bank_icon"
                 app:layout_constraintTop_toTopOf="@id/iv_bank_icon" />
@@ -55,12 +56,38 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
-        <TextView
-            style="@style/SmallTextStyle"
-            android:paddingBottom="4dp"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_empty_bank"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
             android:paddingLeft="@dimen/base_padding"
+            android:paddingTop="25dp"
             android:paddingRight="@dimen/base_padding"
+            android:paddingBottom="25dp"
+            android:visibility="gone">
+
+            <TextView
+                style="@style/BaseTextStyle"
+                android:layout_marginLeft="@dimen/base_padding"
+                android:text="请添加银行卡" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/arrow_right"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tv_withdraw_info"
+            style="@style/SmallTextStyle"
+            android:paddingLeft="@dimen/base_padding"
             android:paddingTop="4dp"
+            android:paddingRight="@dimen/base_padding"
+            android:paddingBottom="4dp"
             android:text="提现金额（收取0.1%手续费）"
             android:textColor="@color/LightGrey" />
 
@@ -74,7 +101,7 @@
                 android:text="提现金额" />
 
             <EditText
-                android:id="@+id/et_customer_phone"
+                android:id="@+id/et_withdraw_money"
                 style="@style/BaseEditTextStyle"
                 android:gravity="right"
                 android:hint="请输入"
@@ -94,11 +121,13 @@
             android:background="@color/white">
 
             <TextView
+                android:id="@+id/tv_balance"
                 style="@style/SmallTextStyle"
                 android:text="可用余额：2000元"
                 android:textColor="@color/LightGrey" />
 
             <TextView
+                android:id="@+id/tv_all_balance"
                 style="@style/SmallTextStyle"
                 android:layout_alignParentRight="true"
                 android:text="全部提现"
@@ -114,18 +143,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingBottom="@dimen/small_padding"
-        android:paddingTop="@dimen/small_padding">
+        android:paddingTop="@dimen/small_padding"
+        android:paddingBottom="@dimen/small_padding">
 
         <TextView
             android:id="@+id/tv_withdraw"
             style="@style/BaseTextStyle"
             android:layout_gravity="center"
             android:background="@drawable/shape_account_btn"
-            android:paddingBottom="8dp"
             android:paddingLeft="50dp"
-            android:paddingRight="50dp"
             android:paddingTop="8dp"
+            android:paddingRight="50dp"
+            android:paddingBottom="8dp"
             android:text="确认提现"
             android:textColor="@color/white" />
 
