--- a/app/src/main/res/layout/activity_business_school.xml
+++ b/app/src/main/res/layout/activity_business_school.xml
@@ -72,6 +72,7 @@
         android:paddingTop="@dimen/small_padding">
 
         <LinearLayout
+            android:id="@+id/ll_praise"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -79,6 +80,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_praise"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/selector_zan" />
@@ -92,6 +94,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_collect"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -99,6 +102,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_collect"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/selector_collect" />
@@ -112,6 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
