--- a/app/src/main/res/layout/activity_earnings.xml
+++ b/app/src/main/res/layout/activity_earnings.xml
@@ -55,9 +55,10 @@
                     android:textColor="@color/LightGrey" />
 
                 <TextView
+                    android:id="@+id/tv_month_earnings"
                     style="@style/SmallTextStyle"
                     android:layout_marginTop="4dp"
-                    android:text="20000元"
+                    android:text="0元"
                     android:textColor="#F5A623"
                     android:textSize="16sp" />
 
@@ -77,9 +78,10 @@
                     android:textColor="@color/LightGrey" />
 
                 <TextView
+                    android:id="@+id/tv_total_earnings"
                     style="@style/SmallTextStyle"
                     android:layout_marginTop="4dp"
-                    android:text="5000元"
+                    android:text="0元"
                     android:textColor="#75C4FF"
                     android:textSize="16sp" />
 
