--- a/app/src/main/res/layout/item_business_school.xml
+++ b/app/src/main/res/layout/item_business_school.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="5dp"
     android:background="@color/white"
     android:paddingBottom="@dimen/small_padding"
@@ -15,7 +16,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/matter_img" />
+        tools:src="@mipmap/matter_img" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -24,7 +25,7 @@
         android:layout_marginLeft="@dimen/base_padding"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="『查询』青汁怎样查真伪？"
+        tools:text="『查询』青汁怎样查真伪？"
         app:layout_constraintBottom_toTopOf="@id/tv_desc"
         app:layout_constraintLeft_toRightOf="@id/iv_product"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,7 +40,7 @@
         android:layout_marginTop="@dimen/small_padding"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="我们每一盒青汁上，都有彩色的二维码标签，都有彩色的二维码标签都有彩色的二维码标签"
+        tools:text="我们每一盒青汁上，都有彩色的二维码标签，都有彩色的二维码标签都有彩色的二维码标签"
         android:textColor="@color/LightGrey"
         app:layout_constraintBottom_toTopOf="@id/cl_bottom"
         app:layout_constraintLeft_toLeftOf="@id/tv_title"
