--- a/app/src/main/res/layout/item_customer_transfer_record.xml
+++ b/app/src/main/res/layout/item_customer_transfer_record.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/tv_transfer_name"
         style="@style/BaseTextStyle"
-        android:text="客户姓名:徐梅"
+        android:text="客户姓名：徐梅"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
