--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,8 @@
     <dimen name="big_padding">16dp</dimen>
     <dimen name="home_tab_height">80dp</dimen>
 
+    <dimen name="avatar_size">50dp</dimen>
+
 
     <dimen name="refresh_header_height_twitter">80dp</dimen>
 </resources>
