--- a/app/src/main/res/layout/activity_retail.xml
+++ b/app/src/main/res/layout/activity_retail.xml
@@ -76,7 +76,7 @@
 
 
             <EditText
-                android:id="@+id/tv_receive_detail_address"
+                android:id="@+id/et_receive_detail_address"
                 style="@style/BaseEditTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
@@ -98,6 +98,7 @@
                     android:text="发货方式" />
 
                 <RadioGroup
+                    android:id="@+id/ship_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
