--- a/app/src/main/res/layout/activity_factory_ship_pay.xml
+++ b/app/src/main/res/layout/activity_factory_ship_pay.xml
@@ -12,16 +12,18 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:paddingBottom="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="50dp">
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/cl_receive_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:padding="@dimen/base_padding">
+                android:padding="@dimen/base_padding"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/iv_address"
@@ -51,12 +53,12 @@
                     style="@style/SmallTextStyle"
                     android:layout_width="0dp"
                     android:layout_marginTop="@dimen/small_padding"
+                    android:layout_marginRight="@dimen/base_padding"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="上海 上海市 青浦区 华徐公路888号1号楼2楼IPD"
                     android:textColor="@color/LightGrey"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginRight="@dimen/base_padding"
                     app:layout_constraintLeft_toLeftOf="@id/tv_receive_name"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_receive_name" />
@@ -68,6 +70,33 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/cl_empty_receive"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@color/white"
+                android:padding="@dimen/base_padding">
+
+
+                <ImageView
+                    android:id="@+id/iv_empty_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_address"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/BaseTextStyle"
+                    android:layout_marginLeft="@dimen/base_padding"
+                    android:text="请选择收货人"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/iv_empty_address"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
             </android.support.constraint.ConstraintLayout>
 
@@ -93,10 +122,10 @@
                     android:text="运费：" />
 
                 <TextView
-                    android:id="@+id/tv_level"
+                    android:id="@+id/tv_express_fee"
                     style="@style/BaseEditTextStyle"
                     android:gravity="right"
-                    android:text="￥200.00"
+                    android:text="￥0.00"
                     android:textColor="@color/red" />
 
             </LinearLayout>
@@ -107,10 +136,10 @@
                 style="@style/BaseTextStyle"
                 android:layout_width="match_parent"
                 android:background="@color/window_bg_color"
-                android:paddingBottom="6dp"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
                 android:paddingTop="6dp"
+                android:paddingRight="14dp"
+                android:paddingBottom="6dp"
                 android:text="支付方式"
                 android:textColor="@color/LightGrey" />
 
@@ -136,15 +165,17 @@
             android:text="合计：" />
 
         <TextView
+            android:id="@+id/tv_total_price"
             style="@style/TitleTextStyle"
-            android:text="￥ 6048.00"
+            android:text="￥ 0.00"
             android:textColor="@color/red" />
 
         <TextView
+            android:id="@+id/tv_express_fee_menu"
             style="@style/BaseTextStyle"
             android:layout_marginLeft="@dimen/small_padding"
             android:layout_weight="1"
-            android:text="(含运费200元)"
+            android:text=""
             android:textColor="@color/LightGrey" />
 
         <TextView
@@ -153,8 +184,8 @@
             android:layout_width="115dp"
             android:background="@color/colorPrimaryDark"
             android:gravity="center"
-            android:paddingBottom="15dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:text="支付"
             android:textColor="@color/white" />
 
