--- a/app/src/main/res/layout/activity_normal_replenish.xml
+++ b/app/src/main/res/layout/activity_normal_replenish.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:focusableInTouchMode="true">
 
     <ScrollView
@@ -27,7 +28,7 @@
                     android:id="@+id/customer_avatar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@mipmap/customer_avatar" />
+                    tools:src="@mipmap/customer_avatar" />
 
                 <TextView
                     android:id="@+id/tv_customer_name"
@@ -63,6 +64,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_customer_level" />
 
                 <ImageView
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/arrow_right"
