--- a/app/src/main/res/layout/item_factory_ship.xml
+++ b/app/src/main/res/layout/item_factory_ship.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="5dp"
     android:background="@color/white"
-    android:paddingBottom="@dimen/small_padding"
     android:paddingLeft="@dimen/base_padding"
+    android:paddingTop="@dimen/small_padding"
     android:paddingRight="@dimen/base_padding"
-    android:paddingTop="@dimen/small_padding">
+    android:paddingBottom="@dimen/small_padding">
 
     <ImageView
         android:id="@+id/iv_product"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/product" />
+        tools:src="@mipmap/product" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -36,17 +37,17 @@
         style="@style/SmallTextStyle"
         android:text="库存：3箱"
         android:textColor="@color/LightGrey"
-        app:layout_constraintBottom_toTopOf="@id/tv_stock_single"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintTop_toTopOf="@id/fox_operation_view" />
 
 
     <com.ipd.taixiuser.widget.ProductOperationView
+        android:id="@+id/fox_operation_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
@@ -55,6 +56,7 @@
         android:layout_marginBottom="@dimen/small_padding"
         android:text="库存：0盒"
         android:textColor="@color/LightGrey"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
         app:layout_constraintLeft_toLeftOf="@id/tv_title" />
 
@@ -62,6 +64,7 @@
     <com.ipd.taixiuser.widget.ProductOperationView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
         app:layout_constraintRight_toRightOf="parent" />
 
