--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:background="@color/white"
-    android:paddingBottom="@dimen/small_padding"
     android:paddingLeft="@dimen/base_padding"
+    android:paddingTop="@dimen/small_padding"
     android:paddingRight="@dimen/base_padding"
-    android:paddingTop="@dimen/small_padding">
+    android:paddingBottom="@dimen/small_padding">
 
     <ImageView
         android:id="@+id/iv_product"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/product" />
+        tools:src="@mipmap/product" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -37,8 +38,7 @@
         android:text="3箱"
         android:textColor="@color/LightGrey"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
-        app:layout_constraintLeft_toLeftOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintLeft_toLeftOf="@id/tv_title" />
 
 
     <TextView
@@ -47,8 +47,7 @@
         android:text="￥ 168.00"
         android:textColor="@color/red"
         app:layout_constraintBottom_toBottomOf="@id/iv_product"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
