--- a/app/src/main/res/layout/activity_confirm_transfer.xml
+++ b/app/src/main/res/layout/activity_confirm_transfer.xml
@@ -24,6 +24,7 @@
                 android:text="接受人账号" />
 
             <TextView
+                android:id="@+id/tv_accept_account"
                 style="@style/BaseEditTextStyle"
                 android:gravity="right"
                 android:text="18321836626" />
@@ -40,6 +41,7 @@
                 android:text="接受人姓名" />
 
             <TextView
+                android:id="@+id/tv_accept_name"
                 style="@style/BaseEditTextStyle"
                 android:gravity="right"
                 android:text="徐梅" />
