--- a/app/src/main/res/layout/activity_join_proxy.xml
+++ b/app/src/main/res/layout/activity_join_proxy.xml
@@ -3,87 +3,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/base_padding"
-        android:background="@drawable/shape_join_proxy_bg">
+    <com.ipd.jumpbox.jumpboxlibrary.widget.CircleImageView
+        android:id="@+id/civ_avatar"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="@dimen/base_padding"
+        android:layout_marginTop="@dimen/base_padding"
+        android:src="@mipmap/customer_avatar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-        <LinearLayout
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginBottom="@dimen/small_padding"
-            android:background="@mipmap/join_proxy_avatar_bg"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@id/tv_proxy_name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <com.ipd.jumpbox.jumpboxlibrary.widget.CircleImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@mipmap/customer_avatar" />
-        </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/base_padding"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@id/civ_avatar"
+        app:layout_constraintLeft_toRightOf="@id/civ_avatar"
+        app:layout_constraintTop_toTopOf="@id/civ_avatar">
 
         <TextView
             android:id="@+id/tv_proxy_name"
-            style="@style/BaseTextStyle"
-            android:layout_marginBottom="3dp"
-            android:text="张景亮"
-            app:layout_constraintBottom_toTopOf="@id/tv_proxy_no"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            style="@style/TitleTextStyle"
+            android:layout_marginBottom="6dp"
+            android:text="张景亮" />
 
         <TextView
             android:id="@+id/tv_proxy_no"
             style="@style/BaseTextStyle"
-            android:layout_marginBottom="@dimen/small_padding"
-            android:text="（代理MYN872）"
-            android:textColor="@color/LightGrey"
-            app:layout_constraintBottom_toTopOf="@id/ll_code"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/ll_code"
-            android:layout_width="290dp"
-            android:layout_height="210dp"
-            android:background="@drawable/shape_code_bg"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="164dp"
-                android:layout_height="164dp"
-                android:scaleType="fitXY"
-                android:src="@mipmap/code" />
-
-            <TextView
-                style="@style/BaseTextStyle"
-                android:text="长按保存二维码" />
+            android:text="(代理MYN872)"
+            android:textColor="@color/LightGrey" />
 
 
-        </LinearLayout>
+    </LinearLayout>
+
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/ll_code"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:background="@mipmap/join_proxy_bg"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        app:layout_constraintDimensionRatio="1:1.2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/civ_avatar"
+        app:layout_constraintWidth_percent="0.7">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/base_padding"
-            android:src="@mipmap/code_hint"
+            android:id="@+id/iv_code"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="30dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/code"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_save"
+            style="@style/BaseTextStyle"
+            android:layout_width="0dp"
+            android:gravity="center"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:text="保存二维码"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
 
     </android.support.constraint.ConstraintLayout>
 
