--- a/app/src/main/res/layout/activity_proxy_info.xml
+++ b/app/src/main/res/layout/activity_proxy_info.xml
@@ -62,6 +62,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_customer_level" />
 
                 <ImageView
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/arrow_right"
