--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -47,7 +47,7 @@
         android:id="@+id/tv_order_hint"
         style="@style/BaseTextStyle"
         android:layout_marginTop="@dimen/base_padding"
-        android:text="共2中商品，实付款"
+        android:text="共1种商品，实付款"
         app:layout_constraintLeft_toLeftOf="@id/tv_order_no"
         app:layout_constraintTop_toBottomOf="@id/view_line2" />
 
