--- a/app/src/main/res/layout/item_proxy.xml
+++ b/app/src/main/res/layout/item_proxy.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="5dp"
     android:orientation="vertical">
 
@@ -16,7 +17,7 @@
             android:id="@+id/customer_avatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@mipmap/customer_avatar" />
+            tools:src="@mipmap/customer_avatar" />
 
         <TextView
             android:id="@+id/tv_customer_name"
