--- a/app/src/main/res/layout/activity_promote.xml
+++ b/app/src/main/res/layout/activity_promote.xml
@@ -2,6 +2,7 @@
 <com.ipd.taixiuser.widget.PromoteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/promote_layout"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:focusableInTouchMode="true"
@@ -128,6 +129,23 @@
             android:text="VIP" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_gift_box"
+        style="@style/PromoteLableMarginStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_vip">
+
+
+        <TextView
+            style="@style/PromoteLableStyle"
+            android:text="礼盒装" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_retail"
@@ -138,7 +156,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_vip">
+        app:layout_constraintTop_toBottomOf="@id/ll_gift_box">
 
 
         <TextView
