--- a/app/src/main/res/layout/activity_leader_replenish_pay.xml
+++ b/app/src/main/res/layout/activity_leader_replenish_pay.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true">
@@ -18,6 +19,65 @@
             android:paddingBottom="50dp">
 
 
+            <android.support.constraint.ConstraintLayout
+                style="@style/BaseTableStyle"
+                android:background="@color/white">
+
+
+                <com.ipd.jumpbox.jumpboxlibrary.widget.CircleImageView
+                    android:id="@+id/customer_avatar"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    tools:src="@mipmap/customer_avatar" />
+
+                <TextView
+                    android:id="@+id/tv_customer_name"
+                    style="@style/BaseTextStyle"
+                    android:layout_marginLeft="@dimen/base_padding"
+                    android:text="徐梅"
+                    app:layout_constraintBottom_toBottomOf="@id/customer_avatar"
+                    app:layout_constraintLeft_toRightOf="@id/customer_avatar"
+                    app:layout_constraintTop_toTopOf="@id/customer_avatar" />
+
+                <TextView
+                    android:id="@+id/tv_customer_level"
+                    style="@style/BaseTextStyle"
+                    android:layout_marginTop="6dp"
+                    android:drawableLeft="@mipmap/proxy_lable"
+                    android:drawablePadding="5dp"
+                    android:gravity="center_vertical"
+                    android:text="代理 (M2FOAJ)"
+                    android:textColor="@color/LightGrey"
+                    app:layout_constraintLeft_toLeftOf="@id/tv_customer_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_customer_name" />
+
+                <TextView
+                    android:id="@+id/tv_customer_phone"
+                    style="@style/BaseTextStyle"
+                    android:layout_marginTop="6dp"
+                    android:drawableLeft="@mipmap/customer_phone"
+                    android:drawablePadding="5dp"
+                    android:gravity="center_vertical"
+                    android:text="18133330000"
+                    android:textColor="@color/LightGrey"
+                    app:layout_constraintLeft_toLeftOf="@id/tv_customer_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_customer_level" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/arrow_right"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+            <View style="@style/ViewLine" />
+
+
             <com.ipd.taixiuser.widget.NotVerticalScrollRecyclerView
                 android:id="@+id/product_recycler_view"
                 android:layout_width="match_parent"
@@ -30,10 +90,10 @@
                 style="@style/BaseTextStyle"
                 android:layout_width="match_parent"
                 android:background="@color/window_bg_color"
-                android:paddingBottom="6dp"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
                 android:paddingTop="6dp"
+                android:paddingRight="14dp"
+                android:paddingBottom="6dp"
                 android:text="支付方式"
                 android:textColor="@color/LightGrey" />
 
@@ -59,11 +119,13 @@
             android:text="合计：" />
 
         <TextView
+            android:id="@+id/tv_total_price"
             style="@style/TitleTextStyle"
-            android:text="￥ 6048.00"
+            android:text="￥ 0.00"
             android:textColor="@color/red" />
 
         <TextView
+            android:visibility="invisible"
             style="@style/BaseTextStyle"
             android:layout_marginLeft="@dimen/small_padding"
             android:layout_weight="1"
@@ -76,8 +138,8 @@
             android:layout_width="115dp"
             android:background="@color/colorPrimaryDark"
             android:gravity="center"
-            android:paddingBottom="15dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:text="支付"
             android:textColor="@color/white" />
 
